[tool.poetry]
name = "langchain_dayone"
version = "0.1.0"
description = ""
authors = ["Benjamin <ben@congdon.dev>"]

[tool.poetry.dependencies]
python = "^3.8.1"
langchain = "^0.0.131"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
